<!DOCTYPE resources[
    <!ENTITY appname "Daily Droid">
    <!ENTITY appversion "4.0.0229">
    <!ENTITY appauthor "Joshua Spann">
    <!ENTITY appbuildno "20020011">
    ]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="title_activity_settings">Settings</string>

    <!-- POPUP NOTIFICATIONS (TOASTS) -->
    <string name="app_notify_file_saved">File saved</string>
    <string name="app_notify_file_saved_to">File saved to:  </string>

    <!-- MAIN MENU ITEMS -->
    <string name="app_menu_item__color_change">Color</string>
    <string name="app_menu_item__export_preferences">Export Data</string>
    <string name="app_menu_item__new_file">New</string>
    <string name="app_menu_item__open_file">Open</string>
    <string name="app_menu_item__save_file">Save</string>
    <string name="app_menu_item__settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- About Settings Fragment -->
    <string name="app_version">&appname; v&appversion; build &appbuildno;</string>
    <string name="app_version_build_date">Build by &appauthor;, Dec 2018</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_general__autosave">Autosave</string>
    <string name="pref_general__autosave_desc">Allows auto-saving whenever new characters are entered.</string>
    <string name="pref_general__autosave_number">Autosave After</string>
    <string name="pref_general__autosave_number_desc">Save after adding this many characters.</string>
    <string name="pref_general__files_hidden_view">Hidden Files</string>
    <string name="pref_general__files_hidden_view_desc">Enable viewing of hidden files</string>
    <string name="pref_general__logging">Logging</string>
    <string name="pref_general__log_calls">Auto-Log Calls</string>
    <string name="pref_general__log_calls_desc">Auto-logs incoming and outgoing calls from native call logs.</string>
    <string name="pref_general__popups">Popups</string>
    <string name="pref_general__popups_verbose">Verbose Popups</string>
    <string name="pref_general__popups_verbose_desc">Toggle popups on certain actions like saving files, changing call status, etc.</string>
    <string name="pref_general__files">Files</string>
    <string name="pref_general__app_color">App Color</string>
    <string name="pref_general__markdown">Markdown Styles</string>
    <string name="pref_general__markdown_desc">Enable use of markdown styles to render markdown in text.</string>
    <string name="pref_general__scroll">Fancy Scroll</string>
    <string name="pref_general__scroll_desc">Use a faster, smoother, animated scroll</string>

    <string name="prompt_file_open">Open File</string>

    <!-- Theme Settings -->
    <string name="pref_themes__darkmode">Dark Mode</string>
    <string name="pref_themes__darkmode_desc">Switches colors UI to a "night mode" with dark backgrounds and light text. Most colors are desaturated to greys.</string>
    <string name="pref_themes__ui_mode">Advanced UI</string>
    <string name="pref_themes__ui_mode_desc">Enables an advanced UI when toggled that has more buttons, menu items, and app statuses.</string>

    <string-array name="pref_example_color_titles">
        <item>Default</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Black</item>
    </string-array>
    <string-array name="list_preference_color_values">
        <item>#3F51B5</item>
        <item>#cc0000</item>
        <item>#ff8800</item>
        <item>#ffbb33</item>
        <item>#669900</item>
        <item>#09c</item>
        <item>#aa66cc</item>
        <item>#222</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->
    <!--string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string-->

</resources>
