<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:background="@color/appBackground"
        android:key="pref_key_autosave_settings"
        android:textColor="@color/appText"
        android:title="@string/pref_general__autosave">
        <SwitchPreference
            android:background="@color/appBackground"
            android:defaultValue="true"
            android:key="daily_droid__pref_autosave_enabled_bln"
            android:summary="@string/pref_general__autosave_desc"
            android:textColor="@color/appText"
            android:title="@string/pref_general__autosave" />
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="daily_droid__pref_autosave_number_num"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_general__autosave_number_desc"
            android:title="@string/pref_general__autosave_number" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="daily_droid__pref_logging_settings"
        android:textColor="@color/appText"
        android:title="@string/pref_general__logging">
        <SwitchPreference
            android:defaultValue="true"
            android:key="daily_droid__pref_autolog_calls_enabled_bln"
            android:summary="@string/pref_general__log_calls_desc"
            android:title="@string/pref_general__log_calls" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_general__popups"
        android:key="pref_key_popup_settings">
    <SwitchPreference
        android:defaultValue="true"
        android:key="daily_droid__pref_verbose_popups_bln"
        android:summary="@string/pref_general__popups_verbose_desc"
        android:title="@string/pref_general__popups_verbose" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_general__files"
        android:key="daily_droid__pref_files_settings">
        <!--ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="pref_default_file"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="Default File" /-->
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_color_titles"
            android:entryValues="@array/list_preference_color_values"
            android:key="daily_droid__pref_app_color_str"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_general__app_color" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="daily_droid__pref_markdown_enabled_bln"
            android:summary="@string/pref_general__markdown_desc"
            android:title="@string/pref_general__markdown" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="daily_droid__pref_fancy_scroll_enabled_bln"
            android:summary="@string/pref_general__scroll_desc"
            android:title="@string/pref_general__scroll" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="daily_droid__pref_files_hidden_bln"
            android:summary="@string/pref_general__files_hidden_view_desc"
            android:title="@string/pref_general__files_hidden_view" />
    </PreferenceCategory>

    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /-->

</PreferenceScreen>
